--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-logging.config=C:\\dev\\java\\log4j.xml
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/spring_batch
+spring.datasource.username=root
+spring.datasource.password=root
+
+app.datasource.jdbcUrl=jdbc:mysql://localhost:3306/app
+app.datasource.username=root
+app.datasource.password=root
+
+spring.batch.jdbc.initialize-schema=always
 logging.level.org.springframework.batch.item.database=DEBUG
